Title: Compiling this project to desktop application Date: 11/30/2024 Contents:     1. compiling this project for MacOS and Window     2. compiling it by electron     3. please read README

--- a/court-manager/package.json
+++ b/court-manager/package.json
@@ -2,6 +2,9 @@
   "name": "court-manager",
   "version": "0.1.0",
   "private": true,
+  "author": "Jihyeok Choi",
+  "main": "main.js",
+  "homepage": "./",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -18,7 +21,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron": "electron .",
+    "build-react": "react-scripts build",
+    "build-electron": "electron-builder"
   },
   "eslintConfig": {
     "extends": [
@@ -37,5 +43,31 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "electron": "^33.2.1",
+    "electron-builder": "^25.1.8",
+    "electron-packager": "^17.1.2"
+  },
+  "build": {
+    "appId": "com.example.courtmanager",
+    "productName": "Court Manager",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "build/**/*",
+      "main.js",
+      "preload.js"
+    ],
+    "mac": {
+      "category": "public.app-category.utilities"
+    },
+    "win": {
+      "target": "nsis"
+    },
+    "linux": {
+      "target": "AppImage"
+    }
   }
 }
