--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "electron": "electron .",
-    "build-react": "react-scripts build",
-    "build-electron": "electron-builder"
+    "build-react": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
@@ -44,11 +42,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "electron": "^33.2.1",
-    "electron-builder": "^25.1.8",
-    "electron-packager": "^17.1.2"
   },
   "build": {
     "appId": "com.example.courtmanager",
