--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,33 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+# ===== 공통 =====
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 .DS_Store
+Thumbs.db
+
+# ===== 환경 변수 =====
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+server/.env
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# ===== React(Client) =====
+client/node_modules/
+client/build/
+client/dist/
+client/coverage/
+
+# ===== Express(Server) =====
+server/node_modules/
+server/dist/
+server/coverage/
+
+# ===== IDE =====
+.vscode/
+.idea/
+*.swp
+*.swo
