modified basic db setup

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,5 @@
-DATABASE_URL=postgresql://courtuser:7824@localhost:5432/courtmanager
+DB_USER=admin
+DB_PASSWORD=7824
+DB_HOST=localhost
+DB_PORT=5432
+DATABASE_URL=postgresql://admin:7824@localhost:5432/courtmanager
